# tpt-vertex

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  NOTICE  README.md  spec.txt  todo.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: desktop.yml  frontend.yml  rust.yml
collab/: Cargo.toml
collab/src/: clock.rs  crdt.rs  lib.rs  presence.rs  protocol.rs  server.rs
desktop/: README.md  package.json
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs  printer.rs
docs/: README.md  accessibility.md  community.md  contributor-onboarding.md  launch-checklist.md  plugin-api.md  security-review.md  user-guide.md
docs/adr/: 0001-record-architecture-decisions.md  0002-dual-licensing.md  0003-monorepo-layout.md  0004-geometric-representation.md  0005-version-control-storage.md  0006-collaboration-crdt.md  0007-desktop-tauri.md  0008-slicing-architecture.md  0009-simulation-scope.md  0010-printer-connectivity.md  0011-polygon-offset-library-evaluation.md  README.md  template.md
docs/specs/: slicer-geometry-kernels.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: AssemblyTreePanel.tsx  FeatureTreePanel.tsx  MotionStudy.tsx  Onboarding.tsx  PrinterPanel.tsx  PropertiesPanel.tsx  SimulationPanel.tsx  SimulationSetup.tsx  SketchEditor.tsx  SlicerPanel.tsx  StatusBar.tsx  StressResult.tsx  Toolbar.tsx  VersionControl.tsx  Viewport.tsx  panels.test.tsx  simulation.test.tsx  sketch.test.tsx  slicer.test.tsx  versionControl.test.tsx
frontend/src/geometry/: buildMesh.ts  simulation.ts  slicer.ts
frontend/src/hooks/: useKeyboardShortcuts.ts
frontend/src/printer/: client.ts
frontend/src/state/: sketchStore.ts  store.test.ts  store.ts  types.ts  versionStore.ts
frontend/src/styles/: global.css  theme.css
frontend/src/test/: e2e.test.tsx  setup.ts
kernel/: Cargo.toml
kernel/benches/: kernel_bench.rs
kernel/src/: assembly.rs  ffi.rs  geometry.rs  lib.rs  tolerance.rs
kernel/src/geometry/: constraint.rs
kernel/src/math/: matrix.rs  quat.rs  vec.rs
kernel/tests/: integration.rs
manufacturing/: Cargo.toml
manufacturing/src/: bom.rs  drawing.rs  export.rs  lib.rs  plugin.rs  step.rs
platform/: Cargo.toml
platform/src/: auth.rs  id.rs  lib.rs  org.rs  permission.rs  project.rs  storage.rs
renderer/: Cargo.toml
renderer/src/: camera.rs  culling.rs  host.rs  lib.rs  mesh.rs  picking.rs  renderer.rs  scene.rs
tpt-vertex-kernel/: Cargo.toml  README.md
tpt-vertex-kernel/src/: assembly.rs  feature_tree.rs  lib.rs  material.rs  math.rs  wasm.rs
tpt-vertex-kernel/src/geometry/: features.rs  mesh.rs  sketch.rs  solid.rs
tpt-vertex-kernel/src/math/: transform.rs
tpt-vertex-printer-link/: Cargo.toml  README.md
tpt-vertex-printer-link/src/: client.rs  esp3d.rs  lib.rs  mock.rs  octoprint.rs  target.rs  transport.rs
tpt-vertex-printer-link/tests/: mock_server.rs
tpt-vertex-simulation/: Cargo.toml  README.md
tpt-vertex-simulation/examples/: dbg2.rs
tpt-vertex-simulation/src/: adaptivity.rs  assembly.rs  bc.rs  buckling.rs  contact.rs  contact_fea.rs  dynamics.rs  element.rs  fatigue.rs  lib.rs  mass_props.rs  material.rs  mesh.rs  modal.rs  motion.rs  nonlinear.rs  plasticity.rs  post.rs  quadratic_tet.rs  solve.rs  thermal.rs  topo_opt.rs  wasm_api.rs
tpt-vertex-slicer/: Cargo.toml  README.md
tpt-vertex-slicer/src/: adaptive.rs  bridging.rs  gcode.rs  infill.rs  layers.rs  lib.rs  offset.rs  path.rs  plugin.rs  presets.rs  profile.rs  repair.rs  seam.rs  slice.rs  support.rs  variable_width.rs
tpt-vertex-slicer/tests/: spec_tests.rs
versioning/: Cargo.toml
versioning/src/: diff.rs  lib.rs  manifest.rs  repo.rs
