[workspace]
resolver = "2"
members = [
    "kernel",
    "renderer",
    "manufacturing",
    "versioning",
    "collab",
]
exclude = [
    "frontend",
    "desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["TPT Solutions"]
repository = "https://github.com/tpt-solutions/vertex"
homepage = "https://tpt-vertex.dev"
description = "TPT Vertex — parametric 3D CAD kernel and rendering (the \"Figma for Hardware\")"

[workspace.dependencies]
