[package]
name = "tpt-vertex-collab"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Real-time collaboration for TPT Vertex via CRDTs over feature trees, with presence and merge semantics."

[dependencies]
tpt-vertex-kernel = { path = "../tpt-vertex-kernel" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]

[lib]
name = "tpt_vertex_collab"
path = "src/lib.rs"
