[package]
name = "tpt-vertex-manufacturing"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Manufacturing & interop for TPT Vertex: mesh/geometry export (STL, OBJ, glTF, STEP), STEP import, bill-of-materials generation, and a plugin registry for custom formats/tools."

[dependencies]
tpt-vertex-kernel = { path = "../kernel" }

[dev-dependencies]

[lib]
name = "tpt_vertex_manufacturing"
path = "src/lib.rs"
