[package]
name = "tpt-vertex-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Platform layer for TPT Vertex: accounts, organizations/teams, projects/workspaces, sharing & permissions, and a pluggable storage backend."

[dependencies]
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]

[lib]
name = "tpt_vertex_platform"
path = "src/lib.rs"
