[package]
name = "tpt-vertex-simulation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Simulation for TPT Vertex: linear-elastic static-stress FEA and assembly motion/kinematics playback over kernel geometry."
readme = "README.md"
keywords = ["fea", "simulation", "cad", "mechanical", "kinematics"]
categories = ["science", "algorithms"]

[dependencies]
tpt-vertex-kernel = { path = "../tpt-vertex-kernel", version = "0.1.0" }

# NOTE: a sparse direct solver (`faer`) is the recommended long-term dependency
# for the global solve (see Phase-11 ADR). For v1 the global system is solved
# with a self-contained dense LU decomposition so the crate stays dependency-free
# and easy to audit; swapping in `faer` is a contained change inside
# `src/solve.rs`.
faer = "0.22"

[dev-dependencies]

[lib]
name = "tpt_vertex_simulation"
path = "src/lib.rs"
