[package]
name = "tpt-vertex-simulation"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Simulation for TPT Vertex: linear-elastic static-stress FEA and assembly motion/kinematics playback over kernel geometry."
readme = "README.md"
keywords = ["fea", "simulation", "cad", "mechanical", "kinematics"]
categories = ["science", "algorithms"]

[dependencies]
tpt-vertex-kernel = { path = "../tpt-vertex-kernel", version = "0.1.0" }

# Sparse direct solver — optional because it pulls in rayon/crossbeam which
# are incompatible with wasm32-unknown-unknown. The dense LU solver in
# solve.rs is always available and is the default for WASM builds.
faer = { version = "0.22", optional = true }

[features]
default = ["faer"]
# Browser/WASM build: excludes faer (and its rayon/crossbeam deps).
wasm = []

[dev-dependencies]

[lib]
name = "tpt_vertex_simulation"
path = "src/lib.rs"
