[package]
name = "vertex-versioning"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Git-like version control for TPT Vertex 3D designs: snapshots, diffing, branching, and merging of parametric feature trees."

[dependencies]
vertex-kernel = { path = "../kernel" }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"

[dev-dependencies]

[lib]
name = "vertex_versioning"
path = "src/lib.rs"
