[package]
name = "tpt-vertex-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["TPT Solutions"]
repository = "https://github.com/tpt-solutions/vertex"
homepage = "https://tpt-vertex.dev"
description = "TPT Vertex desktop client (Tauri) wrapping the web frontend and the Rust kernel."
# This package is intentionally excluded from the root workspace (see the root
# Cargo.toml `exclude`) so the desktop app has its own build/release cadence.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# The Rust geometry kernel is embedded directly for offline-first, no-server
# local evaluation (ADR-0007).
tpt-vertex-kernel = { path = "../../kernel" }
tpt-vertex-manufacturing = { path = "../../manufacturing" }

[features]
# Enable to use the platform WebView; default features chosen by tauri.
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "tpt-vertex-desktop"
path = "src/main.rs"
